--- a/pages/experiments.html
+++ b/pages/experiments.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../CSS/home.css">
     <link rel="stylesheet" href="../CSS/nav.css">
 	<link rel="stylesheet" href="../CSS/footer.css">
-	
 	<link rel="stylesheet" href="../CSS/article.css">
 </head>
 <body>
@@ -157,7 +156,7 @@
             &nbsp&nbsp&nbsp&nbsp 2. In the clean stage, add 50-80 μL of E. coli DH5α to the EP tube, incubate on ice for 30 min, then heat shock at 42 °C for 45 s, add 150 μL of NZY liquid, incubate at 37 °C, 220 rpm for 40 min, coat on LB plates (containing appropriate concentrations of Amp and Kana), and incubate at 37 °C inverted for 12-15 h. <br>						
             &nbsp&nbsp&nbsp&nbsp 3. After the single bacteria grow in the plate, select about 8 single colonies in the ultra-clean table and inoculate them into LB liquid (containing appropriate concentrations of Amp and Kana), shake the bacteria at 220 rpm at 37 °C to OD600 to 1; perform colony PCR screening with T7 universal positive and negative primers, select 1-2 positive clones and send them to the corresponding company for sequencing, and plasmid extraction of successfully sequenced recombinants is stored at -20 °C for subsequent protein expression.
           </p>
-          <img src="" alt="">
+          <img src="../img/experiments/3.1.png" alt="">
           <p class="figure">Figure 3.1 pETTrio-HydABCC expression plasmid construction flow</p>
         </div>
       </div>
@@ -264,7 +263,7 @@
         <p>(4) The above reaction mixing system determined the concentration of product hydrogen by methylene blue redox titration and gas chromatography</p>
         <h3>6.7 Assembly of artificial multi-enzyme complexes</h3>
         <p>It is known that the artificial protein scaffold system (Scaf-CIQ) and four CL-tag fusion proteins can be bound together by interaction between CL and Im reaction pairs. As shown in Figure 6.7.1, an artificial multi-enzyme complex AMC based on the four-enzyme cascade reaction pathway can be constructed by mixing the two in equal molar proportions and incubating at room temperature for 5 minutes.</p>
-        <img src="" alt="">
+        <img src="../img/experiments/Note.png" alt="">
         <p class="figure">Note: Part1: CL-tag fusion protein; Part2: Scaffold protein with Im protein as stock price<br>Figure 6.7.1 Schematic of artificial multi-enzyme complex assembly</p>
       </div>
       <div data-tab="districtName7" class="districtName">
@@ -272,11 +271,11 @@
         <div>
           <h3>7.1 Qualitative and quantitative detection of methylene blue </h3>
           <p>Methylene blue is a universal titration indicator, which can be divided into blue oxidized methylene blue (MB) and colorless reduced methylene blue (leucoMB) types, as shown in Figure 7.1.</p>
-
+		   <img src="../img/experiments/7.1.png" alt="">
           <p class="figure">Figure 7.1 Molecular structure of methylene blue and argylene trihydrate</p>
           <p>Under normal temperature conditions, hydrogen is difficult to undergo redox reaction with blue methylene blue, and the presence of colloidal platinum can  promote its combination with equal molecular weight methylene blue, and the reaction of 1 mol hydrogen and 1 mol blue methylene blue can produce 1 mol colorless methylene blue, as shown in Figure 7.1. The reaction formula is: MB + 2H+ + 2e− = leucoMB. Therefore, we selected colloidal platinum-like methylene blue made by Japan Co., Ltd. for subsequent experiments. </p>
 
-          <img src="" alt="">
+          <img src="../img/experiments/7.2.png" alt="">
           <p class="figure">Figure 7.2 Under colloidal platinum catalysis, 1 mol of hydrogen reacts with 1 mol of MB to form 1 mol of leucoMB</p>
           <p>According to the above formula, the concentration of hydrogen can be determined by methylene blue titration, and the formula for calculating hydrogen concentration according to the methylene blue kit instructions is: <br>
             Hydrogen moles = methylene blue titration droplet number × (17/1000) × (0.3/100)/319.85 <br>
